# lidar_pointpillars

./: .gitignore  CMakeLists.txt  README.md  Toolchain-V5L.cmake  package.xml  pointpillars_nodelet.xml
cmake/: FindTensorRT.cmake
config/: anchor_prototypes_38x7.txt  pointpillars_combined_v2.cfg  pointpillars_mode.cfg  pointpillars_model.cfg
include/: io_trt.hpp  pp_postprocess_cuda.h  utils.h
launch/: pointpillars.launch
onnx/: backbone_decoded_fp32.onnx  backbone_rawhead_int8_qdq.onnx  encoder_fp32.onnx
ref/: example.py
ref/postprocess/: pp_post_cuda.cu  pp_postprocess.py  pp_postprocess_cuda.py
scripts/: extract_anchor_prototypes.py
src/: nms_trt.cpp  pointpillars_node.cpp  pp_postprocess_cuda.cu  voxelization_trt.cpp  voxelization_trt.cu
