<?xml version="1.0"?>
<package format="2">
  <name>lidar_pointpillars</name>
  <version>1.0.0</version>
  <description>PointPillars 3D object detection using TensorRT inference</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nuport_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/pointpillars_nodelet.xml"/>
  </export>
</package>
